# flexi-cad

./: .gitignore  README.md  test_file.flx
.VSCodeCounter/: details.md  results.csv  results.md  results.txt
browser/: README.md  package-lock.json  webpack.config.js
browser/data-model-wasm/: Cargo.toml
browser/data-model-wasm/src/: lib.rs
browser/src/: index.ts
browser/src/rendering/: renderer.ts
browser/src/ui/: controller.ts  gui.ts  key_events.ts
browser/src/ui/tools/: door_tool.ts  wall_tool.ts
data-model/: Cargo.toml
data-model-wasm/: Cargo.toml  package-lock.json  package.json  webpack.config.js
data-model-wasm/src/: lib.rs
data-model/src/: lib.rs
data-model/src/entities/: dimension.rs  door.rs  mod.rs  slab.rs  wall.rs
data-model/src/geometry_kernel/: mod.rs  primitives.rs
operations/: Cargo.toml  rustfmt.toml
operations-kernel/data-model/: Cargo.toml
operations-kernel/data-model/src/: lib.rs
operations-kernel/data-model/src/entities/: mod.rs  wall.rs
operations-kernel/operations/src/: lib.rs  scheduler.rs  tests.rs
operations-kernel/operations/src/operation_manager/: tests.rs
operations-kernel/operations/src/operation_manager/data_manager/: database.rs  mod.rs  tests.rs  undo.rs
operations-kernel/operations/src/operation_manager/dep_manager/: mod.rs
operations/src/: app_state.rs  lib.rs  tests.rs
operations/src/entity_ops/: mod.rs  snapping.rs  tests.rs  wall_ops.rs
operations/src/operation_manager/: mod.rs  tests.rs
operations/src/operation_manager/data_manager/: database.rs  mod.rs  tests.rs  undo.rs
operations/src/operation_manager/dep_manager/: mod.rs
server/: Cargo.toml
server/src/: main.rs  ws_actor.rs
ui/: 1.js  index.d.ts  index.html  index.js  index_electron.html  meshwriter.js  meshwriter.min.js  package-lock.json  package.json  tsconfig.json  webpack.config.js
ui/browser/: index.ts  package-lock.json  package.json  tsconfig.json  webpack.config.js
ui/data-model-wasm/: Cargo.toml  package-lock.json  package.json  webpack.config.js
ui/data-model-wasm/src/: lib.rs
ui/electron/: index_electron.html  index_electron.ts  main.ts  package-lock.json  package.json  tsconfig.json
ui/electron/native/: Cargo.toml  index.d.ts
ui/electron/native/src/: dimension.rs  door.rs  lib.rs  slab.rs  wall.rs
ui/native/: Cargo.toml  artifacts.json  index.d.ts
ui/native/src/: dimension.rs  door.rs  lib.rs  math.rs  wall.rs  ws_client.rs
ui/src/: index.ts  index_electron.ts  main.ts
ui/src/operations/: operations.ts
ui/src/rendering/: renderer.ts
ui/src/ui/: controller.ts  gui.ts  key_events.ts  mouse_events.ts
ui/src/ui/tools/: dimension_tool.ts  door_tool.ts  slab_tool.ts  wall_tool.ts
ui/src/utils/: math.test.ts  math.ts
