[package]
name = "data_model"
version = "0.1.0"
authors = ["SWilcox"]
edition = "2018"

[dependencies]
uuid = {version = "0.7.4", features = ["serde", "v4", "wasm-bindgen"]}
serde = {version = "1.0.92", features = ["derive"]}
serde_json = "1.0.40"
query_interface = "0.3.5"
cgmath = {version = "0.17.0", features = ["serde"]}
typetag = "0.1.3"
