[package]
name = "operations_kernel"
version = "0.1.0"
authors = ["SWilcox"]
edition = "2018"

[dependencies]
ccl = "4.2.0"
tokio = "0.1.21"
futures = "0.1.20"
tokio-threadpool = "0.1.14"
lazy_static = "1.3.0"
crossbeam-channel = "0.3.8"
data_model = {version = "0.1.0", path = "../data-model"}
bincode = "1.1.4"

[dev-dependencies]
query_interface = "0.3.5"
serde = {version = "1.0.92", features = ["derive"]}
serde_json = "1.0.40"