[package]
name = "operations_kernel"
version = "0.1.0"
authors = ["SWilcox"]
edition = "2018"

[dependencies]
ccl = "4.2.0"
rayon = "1.1.0"
lazy_static = "1.3.0"
crossbeam-channel = "0.3.8"
data_model = {version = "0.1.0", path = "../data-model"}
bincode = "1.1.4"
backtrace = "0.3"
query_interface = "0.3.5"
serde = {version = "1.0.92", features = ["derive"]}
serde_json = "1.0.40"