[package]
name = "server"
version = "0.1.0"
authors = ["SWilcox"]
edition = "2018"

[dependencies]
actix = "0.8.3"
actix-web = "1.0.5"
actix-web-actors = "1.0.0"
serde = {version = "1.0.92", features = ["derive"]}
serde_json = "1.0.40"
data_model = {version = "0.1.0", path = "../data-model"}
operations_kernel = {version = "0.1.0", path = "../operations"}
structopt = "0.2.15"
fern = "0.5.8"
chrono = "0.4.7"
log = "0.4.6"
ccl = "4.2.0"
crossbeam-channel = "0.3.8"

